# Image-Enhancement

./: .gitignore  CMakeLists.txt  Readme.md  VideoNoiseAddition.ipynb  main.cpp
header/: HistogramTransformer.h  HomomorphicFilter.h  MotionEstimator.h  NoiseSmoother.h  PointWiseTransformer.h  Sharpener.h  VideoDenoiser.h  lib.h
src/: HistogramTransformer.cpp  HomomorphicFilter.cpp  MotionEstimator.cpp  NoiseSmoother.cpp  PointWiseTransformer.cpp  Sharpener.cpp  VideoDenoiser.cpp  lib.cpp
